[tool.poetry]
name = "dbt-column-lineage-core"
version = "0.1.0"
description = ""
authors = ["Arkhipov Nikita"]

[tool.poetry.dependencies]
python = "^3.10"
pglast = "^3.10"

[tool.poetry.dev-dependencies]
# linting
flake8 = "^4.0.1"
# formatting
pre-commit = "^2.19.0"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.13.9"

[tool.isort]
profile = "black"

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
